# markdown-translate-ai

./: README.md  pyproject.toml
src/markdown_translate_ai/: translator.py
src/markdown_translate_ai/config/: models_config.py
src/markdown_translate_ai/providers/: mlx.py
